--- a/amvera.yml
+++ b/amvera.yml
@@ -4,7 +4,7 @@ services:
   app:
     image: 'naumen-testovoe:latest'
     build:
-      context: .
+      context: docker
     container_name: app
     depends_on:
       - db
@@ -14,7 +14,7 @@ services:
       - SPRING_DATASOURCE_PASSWORD=password
       - SPRING_JPA_HIBERNATE_DDL_AUTO=update
     ports:
-      - "8080:8080"
+      - "80:80"
 
 
   db:
