--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,31 @@
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/naumen
+spring.datasource.url=jdbc:h2:file:./db/naumen
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=naumen
 spring.datasource.password=password
 spring.jpa.generate-ddl=true
-server.port=8080
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.show_sql=hibernate.show_sql=true
 
 #????? ???????? HTTP ?????? PUT, PATH, DELETE
 spring.mvc.hiddenmethod.filter.enabled=true
+
+
+
+
+
+
+
+
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/naumen
+#spring.datasource.username=naumen
+#spring.datasource.password=password
+#spring.jpa.generate-ddl=true
+#server.port=8080
+#
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.show_sql=hibernate.show_sql=true
+#
+##????? ???????? HTTP ?????? PUT, PATH, DELETE
+#spring.mvc.hiddenmethod.filter.enabled=true
