--- a/amvera.yml
+++ b/amvera.yml
@@ -1,25 +1,18 @@
-version: '2'
-
-services:
-  app:
-    image: 'naumen-testovoe:latest'
-    build:
-      context: docker
-    container_name: app
-    depends_on:
-      - db
-    environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/naumen
-      - SPRING_DATASOURCE_USERNAME=naumen
-      - SPRING_DATASOURCE_PASSWORD=password
-      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
-    ports:
-      - "80:80"
-
-
-  db:
-    image: 'postgres:13.1-alpine'
-    container_name: db
-    environment:
-      - POSTGRES_USER=naumen
-      - POSTGRES_PASSWORD=password
+meta:
+  environment: jvm
+  toolchain:
+    name: maven
+    version: 17
+build:
+  artifacts:
+    '/target/*.jar': /
+  args:
+run:
+  jarName: '"/*.jar"'
+  persistence_mount: /data
+  container_port: 80
+  environment:
+    - SPRING_DATASOURCE_URL=jdbc:h2:file:./db/naumen
+    - SPRING_DATASOURCE_USERNAME=naumen
+    - SPRING_DATASOURCE_PASSWORD=password
+    - SPRING_JPA_HIBERNATE_DDL_AUTO=update
