--- a/amvera.yml
+++ b/amvera.yml
@@ -6,7 +6,7 @@ meta:
 build:
   artifacts:
     'target/*.jar': /
-  args:
+  args: -Dserver.port=80 -Pproduction
 run:
   jarName: '"/*.jar"'
   persistence_mount: /data
