--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://dpg-ch0e1u33cv2c5b3j4f0g-a.oregon-postgres.render.com:5432/naumen_db
+spring.datasource.url=jdbc:postgresql://dpg-ch0e1u33cv2c5b3j4f0g-a.oregon-postgres.render.com:5432/naumen_db?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=naumen
 spring.datasource.password=TUnzKq9jffjYYYZSvSzpgvrugsbykPvZ
 spring.jpa.generate-ddl=true
@@ -10,3 +10,4 @@ spring.jpa.properties.hibernate.show_sql=hibernate.show_sql=true
 
 #????? ???????? HTTP ?????? PUT, PATH, DELETE
 spring.mvc.hiddenmethod.filter.enabled=true
+server.servlet.encoding.charset=UTF-8
